- Removed check for unsupported file types, now any unknown type will just open as text - Added CancelAction to the ConfirmWindow, so you can add code that runs when cancel is pressed - Implemented the incremental version system from Redstone Essentials - Hide certain windows when the ModelEditorWindow is open - Added ExternalEditorHelper helper for .bbmodel files - Refactored some code and got rid of unused methods - Added file descriptions for .lang and .glsl files - Implemented ModelEditorWindow model closing and saving - Changed ModelEditorWindow element property fields from inputFloat3 to sliderFloat3 - Implemented file change detection to model editor - Changed all "are you sure you want to close file" windows to have a "do you want to save this file" first before they ask to close. - Changed the ModelEditorWindow grid from a 10x10 grid to a 3x3 with a 16x16 embedded in the center tile